# burncloud-client

./: .gitignore  Cargo.toml
src/: app.rs  lib.rs  main.rs  tray.rs
src/components/: layout.rs
src/pages/: api.rs  dashboard.rs  deploy.rs  mod.rs  models.rs  monitor.rs  settings.rs
