[package]
name = "burncloud-client"
version = "0.1.5"
edition = "2021"
description = "Desktop GUI client application for BurnCloud AI model deployment platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
burncloud-client-api = "0.1.2"
burncloud-client-dashboard = "0.1.2"
burncloud-client-deploy = "0.1.2" 
burncloud-client-models = { path = "../burncloud-client-models" }
burncloud-client-monitor = "0.1.2" 
burncloud-client-settings = "0.1.2" 
burncloud-client-shared = "0.1.3"
burncloud-client-tray = "0.1.3"
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-router = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }    